# pydantic-arrow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  memory.yml  pr-title.yml  release.yml  tests.yml
src/pydantic_arrow/: __init__.py  _convert.py  _frame.py  _schema.py  _sources.py  _types.py
tests/: conftest.py  test_coercion.py  test_frame.py  test_memory.py  test_sources.py  test_types.py
tests/frame/: test_compute.py  test_field_attrs.py  test_frame.py  test_io.py  test_pydantic_compat.py
tests/memory/: conftest.py  test_field_attrs.py  test_filter.py  test_generator.py  test_io_formats.py  test_limit_head.py  test_parquet.py  test_row_source.py
tests/sources/: conftest.py  test_batch_reader_source.py  test_concat_source.py  test_from_iterable.py  test_generator_source.py  test_parquet_source.py  test_row_source.py  test_sources.py  test_sources_extended.py  test_table_source.py
tests/types/: test_coercion.py  test_schema.py  test_types.py  test_types_extended.py
