[project]
name = "pydantic-arrow"
version = "0.0.1"
description = "Pydantic-native lazy Apache Arrow DataFrame wrapper"
readme = "README.md"
authors = [
    { name = "sam-hey", email = "40773225+sam-hey@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyarrow>=15.0,<24.0",
    "typing-inspection>=0.4.0,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "dirty-equals",
    "inline-snapshot",
    "pytest-memray>=1.8.0",
]
lint = [
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog = false           # no CHANGELOG.md; release notes live only in the GitHub Release
build_command = ""          # building is handled in the publish job
